--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,12 @@
     <!-- css in main_img.css  -->
    <div class="main_img">
        <div class="contain">
-               <div class="b1">
+                <div class="b1">
                    <img src="/images/img-2.svg" alt="">
-                   <!-- <img src="/images/img-3.svg" alt="">
-                   <img src="/images/10258678_4384867.svg" alt=""> -->
+                   <img src="/images/img-3.svg" alt="">
+                   <img src="/images/10258678_4384867.svg" alt="">
                </div>
-         <div class="hub">
+               <div class="hub">
                THE
                   TECH<H1><div class="waviy">
                     <span style="--i:1">T</span>
@@ -39,7 +39,7 @@
                   <span style="--i:13">G</span>
                  
                </div></H1>HUB
-         </div>
+              </div>
        </div>
    </div>
  
@@ -187,81 +187,56 @@
          <h1>watch our champs</h1>
          <span>Learning in action</span>
          </div>
-    <div class="cont">    
-          <div class="slide-container active">
-            <div class="slide">
-                <i class="fas fa-quote-right icon"></i>
-                <div class="user">
-                    <img src="/images/ashvick.jpeg" >
-                    <div class="user-info">
-                        <h3>john deo</h3>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fars fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="text"> Lorem ipsum dolor, sit amet consectetur 
-                     adipisicing elit. Laborum deserunt expedita fuga impedit 
-                      perspiciatis pariatur nobis cum labore ex quisquam? Iusto 
-                       aliquam ab maiores explicabo sapiente ullam dolor eum sequi! 
-                     </p>
-            </div>
-          </div>
-          <div class="slide-container">
-            <div class="slide">
-                <i class="fas fa-quote-right icon"></i>
-                <div class="user">
-                    <img src="/images/ashvick.jpeg" >
-                    <div class="user-info">
-                        <h3>john deo</h3>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fars fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="text"> Lorem ipsum dolor, sit amet consectetur 
-                     adipisicing elit. Laborum deserunt expedita fuga impedit 
-                      perspiciatis pariatur nobis cum labore ex quisquam? Iusto 
-                       aliquam ab maiores explicabo sapiente ullam dolor eum sequi! 
-                     </p>
-            </div>
-          </div>
-          <div class="slide-container">
-            <div class="slide">
-                <i class="fas fa-quote-right icon"></i>
-                <div class="user">
-                    <img src="/images/ashvick.jpeg" >
-                    <div class="user-info">
-                        <h3>john deo</h3>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fars fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="text"> Lorem ipsum dolor, sit amet consectetur 
-                     adipisicing elit. Laborum deserunt expedita fuga impedit 
-                      perspiciatis pariatur nobis cum labore ex quisquam? Iusto 
-                       aliquam ab maiores explicabo sapiente ullam dolor eum sequi! 
-                     </p>
-            </div>
-          </div>
-             <div id="next" class="fas fa-chevron-right" onclick="next()"></div>
-             <div id="prev" class="fas fa-chevron-left" onclick="prev()"></div>
-        </div>
-
      </div>
+
+
+     <section class="testimonial-section">
+		<div class="large-container">
+			
+
+			<div class="testimonial-carousel owl-carousel owl-theme">
+				<!-- Testimonial Block -->
+				<div class="testimonial-block">
+					<div class="inner-box">
+						<div class="text">Why is this important? Because clients want to know the businesses they depend on for advice, are well managed in their own right.  Not only that but this event gives you the chance to give your back-office team</div>
+						<div class="info-box">
+							<div class="thumb"><img src="http://t.commonsupport.com/adro/images/resource/thumb-1.jpg" alt=""></div>
+							<h4 class="name">Mahfuz Riad</h4>
+							<span class="designation">Ui Designer & CEO</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- Testimonial Block -->
+				<!-- <div class="testimonial-block">
+					<div class="inner-box">
+						<div class="text">Why is this important? Because clients want to know the businesses they depend on for advice, are well managed in their own right.  Not only that but this event gives you the chance to give your back-office team</div>
+						<div class="info-box">
+							<div class="thumb"><img src="http://t.commonsupport.com/adro/images/resource/thumb-1.jpg" alt=""></div>
+							<h4 class="name">Mahfuz Riad</h4>
+							<span class="designation">Ui Designer & CEO</span>
+						</div>
+					</div>
+				</div>
+
+				 Testimonial Block
+				<div class="testimonial-block">
+					<div class="inner-box">
+						<div class="text">Why is this important? Because clients want to know the businesses they depend on for advice, are well managed in their own right.  Not only that but this event gives you the chance to give your back-office team</div>
+						<div class="info-box">
+							<div class="thumb"><img src="http://t.commonsupport.com/adro/images/resource/thumb-1.jpg" alt=""></div>
+							<h4 class="name">Mahfuz Riad</h4>
+							<span class="designation">Ui Designer & CEO</span>
+						</div>
+					</div>
+				</div>
+			</div> -->
+
+			<div class="thumb-layer paroller">
+				<figure class="image"><img src="http://t.commonsupport.com/adro/images/resource/user-thumbs.png" alt=""></figure>
+			</div>
+		</div>
+	</section>
     <!-- css in slide-container.css  -->
    
      <div class="Team">
