--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,6 +1,16 @@
 body {
     margin: 0;
+    background-color: #4E3BC2;
+
     font-family: Arial, sans-serif;
+}
+@keyframes slideInFromCenter {
+    from {
+        transform: translateY(-50vh); 
+    }
+    to {
+        transform: translateY(0); 
+    }
 }
 
 .navbar {
@@ -10,8 +20,15 @@ body {
     color: #fff;
     /* padding: 15px 0; */
     /* top: 0px; */
-    /* position:fixed; */
+    position:fixed;
+    animation: slideInFromCenter 1s ease forwards;
+    opacity: 0; /* Start with opacity 0 to hide initially */
+    visibility: hidden; 
 
+}
+.navbar.loaded {
+    opacity: 1; /* Show the navbar after animation */
+    visibility: visible;
 }
 
 .container {
