--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,24 +1,45 @@
-.container{
+.wrap{
     width: 100%;
     height: 100vh;
+    /* border: 2px solid burlywood; */
+    display: flex;
+    justify-content:space space-between;
+    align-items: center;
+}
+.theme{
+    width:70%;
+    height: 100%;
+    background: linear-gradient(to bottom,#4E3BC2, rgb(116, 8, 155));
+
+}
+.theme2{
+    height: 90%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* border: 2px solid salmon; */
+
+    
+}
+.button{
+    background-color:#4E3BC2 ;
 }
 
 
-.wrapper{
-    width: 500px;
-    height:600px;
-    border: 2px solid rgb(22, 22,22);
-}
-.wrapper h1{
-    color: rgb(32, 32, 91);
+
+
+.theme nav{
+    width: 100%;
+    height: 100px;
+    /* border: 2px solid salmon; */
+    display: flex;
+    align-items: center;
+    color: white;
     font-size: 3rem;
-    position: absolute;
-    left: 35%;
+    font-weight: 500;
 }
-.wrapper .login_form{
-    position: absolute;
-    top :40vh;
+.theme img{
+    width: 90px;
+    margin: 20px 20px 20px 20px; 
 }
