--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -52,6 +52,8 @@
   align-items: center;
   flex-direction: column;
   margin-top:40px;
+  opacity: 0;
+  transform: translateY(100px);
 
 }
 
@@ -65,9 +67,8 @@
   justify-content: space-evenly;
   align-items: center;
   font-size: 5rem;
-  animation: fadeIn 2s ease forwards;
    /* Initial animation to fade in */
-  /* opacity: 0; */
+ 
 
 }
 @media(orientation:portrait){
@@ -78,15 +79,19 @@
     /* align-items: center; */
   }
 }
+.fadeIn {
+  animation: fadeInAnimation 2s ease forwards;
+}
 
 
-
-@keyframes fadeIn {
+@keyframes fadeInAnimation {
   from {
-    opacity: 0;
+    opacity: 0.5;
+    transform: translateY(100px);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -256,6 +261,8 @@
     /* border-radius: inherit; */
     margin-top: 2vh;
     padding-top: 20px;
+    opacity: 0;
+    transform: translateY(100px);
 }
 .about_robonox{
   width: 80vw;
@@ -264,11 +271,7 @@
   /* font-size: 1.2vw; */
  
 }
-@media(orientation:portrait){
-  .about_robonox{
-    /* font-size: 3rem; */
-  }
-}
+
 
 
 .waviy {
@@ -393,6 +396,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    opacity: 0;
+    transform: translateY(100px);
   
   }
     
@@ -474,9 +479,12 @@
        height: auto;
        /* border: 2px solid black; */
        margin-top: 20px;
+       opacity: 0;
+       transform: translateY(100px);
        /* display: flex;
        justify-content: center;
        align-items: center; */
+
        
  }
  
@@ -485,10 +493,10 @@
  .why .container1{
        width: 100%;
        color: black;
-      font-size: 3rem;
+       font-size: 3rem;
        padding-bottom:20px ;
       /* border: 2px solid orange; */
-       padding-left: 100px;
+       padding-left: 90px;
        
  }
  .why .container1 span{
@@ -551,13 +559,13 @@
  }
 
  .champs{
-  
-
-  /* border: 2px solid red; */
   margin-top: 2rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  opacity: 0;
+  transform: translateY(100px);
+
  }
  .champs_container{
   margin-left: 1vw;
@@ -574,3 +582,5 @@
   padding-left: 8px;
   font-size: 4rem;
  }
+
+ 
