--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/stylesheets/login.css">
 </head>
 <body>
-    <div class="     flex items-center justify-center mt-3">
+    <div class="wrap">
+         <div class="theme">
+          <nav>
+            <img src="/images/logo.png" alt="">
+            <h1>ROBONOX</h1>
+          </nav>
+         </div>
+        <div class="theme2 flex items-center mt-3">
         <div class="w-80  bg-zinc-100 px-4 py-5 rounded-md">
             <h1 class="text-3xl tracking-tight capitalize text-center font-semibold text-zinc-700 ">Welcome to Robonox</h1>
             <form action="/loginN" method="post">
                 <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="text" name="username" placeholder="username">
                 <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="password" name="password" placeholder="password">
                 <a href="#" class="text-zinc-700 font-semibold">Forgot password?</a>
-                <input class="border-2 rounded-full block w-full px-3 py-2 my-2 bg-red-600 text-white" type="submit" value="login">
+                <input class="button border-2 rounded-full block w-full px-3 py-2 my-2 text-white" type="submit" value="login">
     
                 <p class="inline-block text-center text-xs font-semibold text-zinc-700">By continuing, you agree to Robonox's Terms of 
                            Service; Opens a new tab and acknowledge that you've read our Privacy Policy; Opens a new tab. Notice at 
@@ -24,6 +32,8 @@
             </form>
             <a href="/signup" class="inline-block mt-7 text-sm font-semibold text-zinc-700 text-center w-full" >Don't have an account?</a>
         </div>
+    </div>
+
     </div>
 </body>
 </html>
